# BMS

./: .gitignore  README.md  index.html  overview.json  overview_architecture.puml
.github/workflows/: cd.yml  ci.yml
BEMS_ENTERPRISE_COMPLETE/: overview.json  overview_architecture.puml
BEMS_ENTERPRISE_COMPLETE/repo/: .dockerignore  .env.example  Dockerfile  README.md
BEMS_ENTERPRISE_COMPLETE/repo/.github/workflows/: cd.yml  ci.yml
BEMS_ENTERPRISE_COMPLETE/repo/ai-service/: Dockerfile  app.py  requirements.txt  test_app.py
BEMS_ENTERPRISE_COMPLETE/repo/database/: schema.sql
BEMS_ENTERPRISE_COMPLETE/repo/docker/: README.md  docker-compose.yml
BEMS_ENTERPRISE_COMPLETE/repo/docker/init/: schema.sql
BEMS_ENTERPRISE_COMPLETE/repo/docker/logging/logstash/pipeline/: bems.conf
BEMS_ENTERPRISE_COMPLETE/repo/docker/monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
BEMS_ENTERPRISE_COMPLETE/repo/docker/monitoring/grafana/dashboards/: bems-overview.json
BEMS_ENTERPRISE_COMPLETE/repo/docker/monitoring/grafana/provisioning/dashboards/: bems.yml
BEMS_ENTERPRISE_COMPLETE/repo/docs/: BEMS_ENTERPRISE_COMPLETE.code-workspace  Rheslar1-github.io.code-workspace  SDD.docx  SDP.docx  api-surface.md  architecture-implementation-diff.md  architecture.md  bacnet-135-2020-conformance.md  bacnet-ecostruxure-system-diagram.md  bems-backend-design.md  bems-enterprise-complete-implementation-guide.md  commercial-readiness-field-deployment.md  commissioning-protocol-hardening.md  database-schema.md  deep-architecture.md  demo-environment.md  device-architecture.md  embedded-project-implementation-dashboard.md  generate_enterprise_docs.py  physical-hardware-validation.md  product-overview.md  production-board-flashing-and-update-cycle-testing.md  ui-design-system.md  update_sdd_full_uml.py
BEMS_ENTERPRISE_COMPLETE/repo/docs/diagrams/: bems-data-model.mmd  bems-layered-architecture.mmd  bems-runtime-sequence.mmd
BEMS_ENTERPRISE_COMPLETE/repo/edge-core/: .clang-tidy  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  cppcheck-suppressions.txt
BEMS_ENTERPRISE_COMPLETE/repo/edge-core/packaging/: bems-edge-core.service  bems-swupdate-client@.service
BEMS_ENTERPRISE_COMPLETE/repo/edge-core/scripts/: bems-swupdate-client.sh  bems-system-package-update.sh
BEMS_ENTERPRISE_COMPLETE/repo/edge-core/src/: bacnet_client.cpp  bacnet_client.h  bacnet_interface.cpp  bacnet_interface.h  bacnet_object_database.cpp  bacnet_object_database.h  bounded_queue.h  canbus_interface.cpp  canbus_interface.h  device_manager.cpp  device_manager.h  discovery_service.cpp  discovery_service.h  edge_core_export.h  edge_grpc_server.cpp  edge_grpc_server.h  edge_runtime.cpp  edge_runtime.h  edge_service.cpp  edge_service.h  energy_ai.cpp  energy_ai.h  fieldbus_gateway.cpp  fieldbus_gateway.h  hvac_control.cpp  hvac_control.h  logger.h  main.cpp  modbus_rtu_interface.cpp  modbus_rtu_interface.h  serial_port.cpp  serial_port.h  unique_fd.h  writeback_controller.cpp  writeback_controller.h
BEMS_ENTERPRISE_COMPLETE/repo/edge-core/tests/: bacnet_object_database_test.cpp  bacnet_simulator_test.cpp  bounded_queue_test.cpp  discovery_service_test.cpp  edge_service_test.cpp  energy_ai_test.cpp  fieldbus_interface_test.cpp  hvac_control_test.cpp  serial_port_test.cpp  unique_fd_test.cpp  writeback_controller_test.cpp
BEMS_ENTERPRISE_COMPLETE/repo/field-device/: CMakeLists.txt  README.md
BEMS_ENTERPRISE_COMPLETE/repo/field-device/include/: field_device_firmware.h
BEMS_ENTERPRISE_COMPLETE/repo/field-device/src/: field_device_firmware.cpp  main.cpp  simulated_drivers.cpp  simulated_drivers.h
BEMS_ENTERPRISE_COMPLETE/repo/field-device/tests/: field_device_simulator_test.cpp
BEMS_ENTERPRISE_COMPLETE/repo/node-api/: Dockerfile  aiClient.js  auth.js  edgeClient.js  eventBus.js  package-lock.json  package.json  server.js
BEMS_ENTERPRISE_COMPLETE/repo/node-api/migrations/: 001_enterprise_saas.sql  002_user_authorization.sql  003_ai_fdd_maintenance.sql  004_floors_rooms.sql  005_sample_floor_room_mapping.sql  006_schedule_recurrence_overrides.sql  007_maintenance_modes.sql  008_alarm_logs.sql  009_holidays_special_events.sql  010_trend_logging.sql  011_notification_outbox.sql  012_feature_flags.sql  014_nrf52840_wireless_devices.sql  015_field_selectable_power_meter.sql  016_eeprom_setpoint_storage.sql  017_device_persistent_storage.sql  018_nrf52840_bacnet_devices.sql  019_bacnet_device_resident_schedules.sql  020_device_battery_percentage.sql  021_ota_reporting_workflows.sql  022_report_schedule_execution.sql  023_ensure_demo_admin_user.sql  runMigrations.js
BEMS_ENTERPRISE_COMPLETE/repo/node-api/tests/: auth.test.js
BEMS_ENTERPRISE_COMPLETE/repo/proto/: ai_service.proto  edge_service.proto
BEMS_ENTERPRISE_COMPLETE/repo/scripts/: backup_mysql.sh  deploy_canary.sh  install.sh  production_board_flash_update_test.sh  promote_canary.sh  restore_mysql.sh  rollback_canary.sh  start_demo.sh  verify_architecture.sh
BEMS_ENTERPRISE_COMPLETE/repo/ui/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
BEMS_ENTERPRISE_COMPLETE/repo/ui/src/: App.jsx  index.css
BEMS_ENTERPRISE_COMPLETE/repo/yocto/: README.md
BEMS_ENTERPRISE_COMPLETE/repo/yocto/meta-bems/conf/: layer.conf
BEMS_ENTERPRISE_COMPLETE/repo/yocto/meta-bems/conf/machine/: edge-core.conf
BEMS_ENTERPRISE_COMPLETE/repo/yocto/meta-bems/recipes-bems/edge-core/: edge-core.bb
BEMS_ENTERPRISE_COMPLETE/repo/yocto/meta-bems/recipes-bems/images/: bems-edge-core-image.bb
BEMS_ENTERPRISE_COMPLETE/repo/yocto/meta-bems/recipes-bems/node-api/: node-api.bb
assets/: index-8513-cBi.css  index-DiGCdaS9.js
portfolio/: index.html
